# picoROM

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  pico_rom.dis  pico_rom.elf  pico_rom.elf.map  pico_rom.hex  pico_rom.uf2  pin_definitions.h  rom.c  slower_boot2.dis  slower_boot2.elf  slower_boot2.elf.map  slower_boot2_padded_checksummed.S
